@@ -11,6 +11,8 @@ Improved ZX Desktop:
 -Added new ZX Desktop fill types: Chess, Grid, Random
 
 Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
+Improved 1 bit resample audio filter 
+
 
 Fixed segfaults when changing machines and having ZX Desktop windows opened
 Fixed easter egg anc cyrillic characters
